Quick Fix. limit rolling area, and make it overflow

--- a/DiceRoller.Web/Less/site.less
+++ b/DiceRoller.Web/Less/site.less
@@ -31,7 +31,8 @@ textarea.message-console{
 }
 
 div.dice-rolling-area{
-    min-height: 400px;
+    height: 400px;
+    overflow: auto;
 }
 
 ul.player-list{
